repair z-index

--- a/css/portal.css
+++ b/css/portal.css
@@ -20,6 +20,7 @@ body {
     position: absolute;
     top: 30px;
     left: 50px;
+    z-index: 2;
 }
 
 .title h1 a {
@@ -66,7 +67,6 @@ x3d {
     top: 0;
     left: 0;
     right: 0;
-    z-index: -1;
 }
 
 canvas {
@@ -86,6 +86,7 @@ canvas {
     background-size: 250%;
     transition: all .2s ease-in-out;
     cursor: pointer;
+    z-index: 2;
 }
 
 .map h2 {
